# gtsf-tools

./: .gitignore  .justfile  README.md  architecture.md  ddl.sql  justfile  package.json
intake-api/: README.md  db.py  justfile  main.py  pyproject.toml  schemas.py
intake-api/api/: collections.py  samples.py
intake-ui/: .env.development  .env.production  README.md  index.html  justfile  package-lock.json  package.json  svelte.config.js  todo.md
intake-ui/src/: App.svelte  CameraStage.svelte  FishDetailModal.svelte  HistorySidebar.svelte  IntakeInfo.svelte  IntakeModal.svelte  MeasurementStage.svelte  SedationStage.svelte
intake-ui/src/lib/: DebugBanner.svelte  FishIcon.svelte  Timer.svelte  export.svelte.js  fishIcon.svelte.js  state.svelte.js  utils.js  validation.js
intake-ui/src/routes/: +layout.svelte  +page.svelte
monitoring-ui/: .env.development  .env.production  README.md  index.html  justfile  package-lock.json  package.json
monitoring-ui/src/: App.svelte  app.css
monitoring-ui/src/lib/: FrameStreamer.svelte  MonitoringGraph.svelte  (+1 more)
ng-pranker-monitor/: .gitignore  Dockerfile  README.md  demo.py  justfile  main.py  portfwd.sh  pyproject.toml  run.sh  serve.sh  ui-dist
ng-pranker-monitor/camera_scripts/: monitor  pull  serve
ui/: index.html  package-lock.json  package.json  svelte.config.js
ui/src/: App.svelte  CameraStage.svelte  FishDetailModal.svelte  HistorySidebar.svelte  MeasurementStage.svelte  SedationStage.svelte  StagesContainer.svelte  app.css
ui2/: package.json  svelte.config.js
ui2/src/: app.html  styles.css
(+27 files in other folders)
