[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
    "fastapi[standard]>=0.118.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "s3path>=0.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
