[project]
name = "ng-pranker-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "fastapi>=0.118.0",
    "opencv-python-headless>=4.12.0.88",
    "websockets>=12.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0",
    "watchdog>=4.0.2",
]
